src/index.css
/* ... */
  .line-network {
    position: relative;
    width: 0px;
    height: 3px;
    background-color: #000;
    animation: line-slide-in-network 0.85s 0.3s ease-in forwards;
    transition: width 0.3s ease;
  }

  @keyframes line-slide-in-network {
    from {
        width: 0;
        transform: translateX(-50px);
    }
    to {
        width: 30px;
        transform: translateX(0);
    }
}

.line-about {
    position: relative;
    width: 0px;
    height: 2px;
    background-color: black;
    animation: line-slide-in 0.85s ease-in 1 1s forwards;
    transition: width 0.3s ease;
}

.line-reverse {
    position: relative;
    width: 0px;
    height: 2px;
    background-color: #4ca4c8;
    animation: line-slide-in-reverse 0.85s ease-in forwards;
    transition: width 0.3s ease;
}

@keyframes line-slide-in {
    from {
        width: 0;
        transform: translateX(-50px);
    }
    to {
        width: 30px;
        transform: translateX(0);
    }
}

@keyframes line-slide-in-reverse {
    from {
        width: 0;
        transform: translateX(50px);
    }
    to {
        width: 30px;
        transform: translateX(0);
    }
}

  /* Initial state for the burger menu */
.burger-menu {
    display: flex;
    position: fixed;
    overflow: hidden;
    flex-direction: column;
    align-items: flex-start;
    top: 0;
    right: -100%;
    background-color: rgba(0,0,0,0.85);
    line-height: 50px;
    width: 100%;
    height: 100%;
    padding-left: 50px;
    padding-top: 100px;
    cursor: pointer;
    z-index: 30;
    transition: right 0.4s ease-out;
  }
  
  /* Class to slide the menu in */
  .burger-menu-open {
    right: 0;
    position: fixed;
    overflow: hidden;
  }
  

  .subtitle-fade-in {
    animation: subtitle-fade-in 0.85s ease-in-out normal forwards;
  }

  @keyframes subtitle-fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
  }

  .hovered:hover {
    background-color: rgba(255, 255, 255, 0.472);
    transition: all 0.3s ease-in-out
  }
  .hovered:hover .icon {
    background-color: #4ca4c8;
    transition: all 0.3s ease-in-out;
  }
  .hovered:hover .icon .icon-color {
    fill: white;
    transition: all 0.3s ease-in-out;
  }


  textarea {
    min-height: 250px;
    max-height: 250px;
    overflow-y: auto;
  }
  
  .focused-text-input:focus {
    border-color: #4ca4c8;
  }

  .hovered-button:hover .text-hover-white {
    color: #4ca4c8;
    transition: all 0.3s ease-in-out;
  }

html, body {
    height: 100%;
    margin: 0;
  }

  body {
    overflow-x: hidden;
  }
  
  .container-content {
    display: flex;
    flex-direction: column;
  }
  
  .content {
    flex: 1;
    display: flex;
    flex-direction: column;
  } 

  /* For Safari on iOS */
  @supports (-webkit-touch-callout: none) {
    .content {
      height: -webkit-fill-available;
    }
  }
  
  footer {
    position: relative;
    bottom: 0;
    text-align: center;
  }

  .sliding-color::before {
    display: none;
  }
  

.sliding-color {
    background-color: #53a4db;
    overflow: hidden;
    width: 100%;
    height: auto;
    animation: slide-up-color 0.75s ease-in-out 1 forwards;
    text-align: center;
    padding: 20px;
    color: white;
  }
  
  @keyframes slide-up-color {
    0% {
      transform: translateY(100%);
    }
    100% {
      transform: translateY(0);
    }
  }

  .about-p-fade-up {
    opacity: 0;
    animation: fade-up 0.75s ease-in-out 1 0.5s normal forwards;
  }

  .about-p-fade-in {
    opacity: 0;
    animation: subtitle-fade-in 0.75s ease-in-out 1 0.5s normal forwards;
  }

  .btn{
    width: 150px;
    height: 50px;
    line-height: 50px;
    border: 2px solid #4ca4c8;
    margin: 30px 0;
    position: relative;
    cursor: pointer;
    transition: all 1s ease;
    overflow: hidden;
}

.btn > p {
  text-align: center;
  text-transform: uppercase;
  color: #4ca4c8;
  font-weight: bold;
  font-size: 16px;
  position: relative;
  z-index: 1;
}
  .btn > p:hover {
    color: white;
  }

  .btn:before{
    content: "";
    width: 100%;
    height: 100%;
    background-color: #4ca4c8;
    position: absolute;
    transition: all 0.3s ease;
}

.btn-4:before{
  top: 60px;
  left: 0;
} 

.btn-4:hover:before{
  top: 0;
}

/* Update the styles for project cards */
.project-card {
  width: 100%;

  background-color: #fff;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  transition: transform 0.3s;
}

.project-card:hover {
  transform: translateY(-5px);
}

.project-card img {
  border-radius: 10px 10px 0 0;
}

.project-card-info {
  padding: 20px;
}

@media (max-width: 768px) {
  .flex-col {
    flex-direction: column;
  }
  .project-card {
    max-width: 100%;
  }
}


@keyframes fadeUp {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.project-card:nth-child(odd) {
  animation: fadeUp 0.75s ease 0.2s forwards;
}

.project-card:nth-child(even) {
  animation: fadeUp 0.75s ease 0.4s forwards;
}


.project-card:hover .project-card-info {
  opacity: 1;
  height: 75px;
  background-color: #4ca4c8;
  transition: all 0.2s ease-in-out;
}

.project-card:hover .project-card-info > p {
  color: white;
}

.project-card img {
  transform: scale(1);
  transition: transform 0.4s ease-in-out;
}

.project-card:hover img {
  transform: scale(1.05);
  transition: all 0.4s ease-in-out;
}

.img-brightness {
  filter: brightness(0.5) saturate(200%);
  transition: all 0.4s ease-in-out;
}

.caret-animate {
  color: white;
  animation: caret-animation 2s ease-in-out infinite;
}

@keyframes caret-animation {
  0% {
    opacity: 0;
    transform: translateX(0);
  }
  75% {
    opacity: 1;
    transform: translateX(10px);
  }
  100% {
    opacity: 0;
    transform: translateX(10px);
  }
}

.all-projects-container {
  text-align: center;
}
/* ... */

